# gdslib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  TODO.md  test_res  test_run.sh
example_files/: example_garraylist.c  example_garraystack.c  example_gcircular_array.c  example_glinkedlist.c  example_gpqueue.c  example_gqueue.c  example_gringbuffer.c  example_gstack.c  example_gtree.c
include/: anode.h  gallocator.h  garraylist.h  garraystack.h  gcircular_array.h  gds_types.h  gitr.h  glinkedlist.h  gnode.h  gnode_macros.h  gnodes_types.h  gpriority_queue.h  gqueue.h  gringbuffer.h  gstack.h  gtree.h
src/: anode.c  gallocator.c  ganode.c  garraylist.c  garraystack.c  gcircular_array.c  gheap.c  gitr.c  glinkedlist.c  gnode.c  gpqueue.c  gpriority_queue.c  gqueue.c  gringbuffer.c  gstack.c  gtree.c  tree.c
test_files/: test_garraylist.c  test_garraystack.c  test_glinkedlist.c  test_gqueue.c  test_gstack.c
